--- a/StockCTRL Client/src/main/resources/org/example/stockctrl/main-view.fxml
+++ b/StockCTRL Client/src/main/resources/org/example/stockctrl/main-view.fxml
@@ -20,11 +20,11 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="150.0" text="Orders" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#switchSceneToOrderViev" prefHeight="60.0" prefWidth="150.0" text="Orders" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
          <font>
             <Font size="18.0" />
          </font></Button>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="150.0" text="Settings" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#switchSceneToSettingsViev" prefHeight="60.0" prefWidth="150.0" text="Settings" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
