--- a/StockCTRL/src/main/resources/org/example/stockctrl/settings-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/settings-view.fxml
@@ -20,6 +20,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -44,9 +45,14 @@
          </font>
       </Label>
       <Button mnemonicParsing="false" onAction="#switchSceneToMainViev" text="Back" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <TextField GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <TextField fx:id="userName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <TextField fx:id="userSurname" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <TextField fx:id="userAddress" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+      <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#changeUserDetails" text="Submit" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
    <padding>
       <Insets left="50.0" right="50.0" />
