--- a/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" vgap="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.stockctrl.ClientController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.stockctrl.ClientController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -41,6 +41,7 @@
             <Font size="18.0" />
          </font>
       </Label>
+      <ListView fx:id="productsList" editable="true" prefHeight="0.0" prefWidth="196.0" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3" />
    </children>
    <padding>
       <Insets left="50.0" right="50.0" />
