--- a/StockCTRL/src/main/resources/org/example/stockctrl/order-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/order-view.fxml
@@ -26,6 +26,7 @@
                 <Font size="18.0" />
             </font>
         </Label>
+      <ListView fx:id="productsList" GridPane.columnIndex="1" GridPane.rowIndex="3" />
     </children>
     <padding>
         <Insets left="50.0" right="50.0" />
