--- a/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
@@ -41,7 +41,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <ListView fx:id="productsList" editable="true" prefHeight="0.0" prefWidth="196.0" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3" />
+      <ListView fx:id="productsList" prefHeight="60.0" prefWidth="100.0" GridPane.columnSpan="3" GridPane.rowIndex="2" GridPane.rowSpan="3" />
    </children>
    <padding>
       <Insets left="50.0" right="50.0" />
