--- a/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/products-view.fxml
@@ -26,7 +26,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button mnemonicParsing="false" onAction="#buyProducts" text="Buy" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+      <Button mnemonicParsing="false" onAction="#buyProducts" text="Cart (0)" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
          <font>
             <Font size="18.0" />
          </font>
