--- a/StockCTRL/src/main/resources/org/example/stockctrl/start-view.fxml
+++ b/StockCTRL/src/main/resources/org/example/stockctrl/start-view.fxml
@@ -5,9 +5,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="CENTER" hgap="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" vgap="20.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.stockctrl.ClientController">
+<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.stockctrl.ClientController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -17,24 +19,44 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="194.0" text="Welcome" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_WORD_ELLIPSIS" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="35.0" prefWidth="194.0" text="Welcome" textAlignment="RIGHT" textFill="WHITE" textOverrun="CENTER_WORD_ELLIPSIS" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Button alignment="CENTER" mnemonicParsing="false" onAction="#switchSceneToMainViev" prefHeight="60.0" prefWidth="150.0" text="Login" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <Button alignment="CENTER" mnemonicParsing="false" onAction="#switchSceneToMainVievLOGIN" prefHeight="40.0" prefWidth="120.0" text="Login" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
          <font>
-            <Font size="18.0" />
+            <Font size="15.0" />
          </font>
       </Button>
-      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="150.0" text="Register" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
+      <Button alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" text="Register" textAlignment="CENTER" GridPane.columnIndex="3" GridPane.rowIndex="7">
          <font>
-            <Font size="18.0" />
+            <Font size="15.0" />
          </font>
       </Button>
+      <PasswordField fx:id="password" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="5" />
+      <Label text="Login" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <Label text="Password" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="4">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+      <TextField fx:id="login" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3" />
+      <Label fx:id="incorrectPass" opacity="0.0" text="Incorrect login or password" textFill="RED" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="6">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
    <padding>
       <Insets left="50.0" right="50.0" />
